added noindex meta

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CTW Studios</title>
     <link rel="icon" type="image/png" href="icon-image-url.png">
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
   </head>
 
 <body>
